Cambio de nombre de uno de los proyectos

--- a/Practica_0/CMakeLists.txt
+++ b/Practica_0/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.24)
-project(Practica_0)
+project(Practica_0_Scnd_Atttmpt)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Practica_0
+add_executable(Practica_0_Scnd_Atttmpt
         main.cpp)
