--- a/Practica_0_Frst_Attmpt/CMakeLists.txt
+++ b/Practica_0_Frst_Attmpt/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.24)
-project(Practica_0_Scnd_Atttmpt)
+project(Practica_0)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Practica_0_Scnd_Atttmpt
+add_executable(Practica_0
         main.cpp)
