--- a/Examen_Parcial_1/CMakeLists.txt
+++ b/Examen_Parcial_1/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Examen_Parcial_1)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Examen_Parcial_1 main.cpp)
+add_executable(Examen_Parcial_1 main.cpp Factura.h Articulo.h Cliente.h)
