Implementadas los subtipos de Poder, ejercicio 3 de la práctica.

--- a/Practica_6/CMakeLists.txt
+++ b/Practica_6/CMakeLists.txt
@@ -5,4 +5,4 @@ set(CMAKE_CXX_STANDARD 20)
 
 FILE(GLOB SOURCE_FILES *.cpp)
 
-ADD_EXECUTABLE(a.exe ${SOURCE_FILES} Poder.h Poder.cpp)
+ADD_EXECUTABLE(a.exe ${SOURCE_FILES} Poder.h Poder.cpp PoderPsiquico.h PoderPsiquico.cpp PoderFisico.h PoderFisico.cpp)
