--- a/Practica_8/CMakeLists.txt
+++ b/Practica_8/CMakeLists.txt
@@ -5,4 +5,4 @@ set(CMAKE_CXX_STANDARD 20)
 
 FILE(GLOB SOURCE_FILES *.cpp)
 
-ADD_EXECUTABLE(a.exe ${SOURCE_FILES})
+ADD_EXECUTABLE(a.exe ${SOURCE_FILES} ItemApilable.h ItemApilable.cpp Espada.h Espada.cpp Filete.h Filete.cpp Bloque.h Bloque.cpp EmptyContainer.h)
