--- a/Practica_9/CMakeLists.txt
+++ b/Practica_9/CMakeLists.txt
@@ -1,8 +1,6 @@
-cmake_minimum_required(VERSION 3.19)
-project(prueba)
+cmake_minimum_required(VERSION 3.24)
+project(Practica_9)
 
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 17)
 
-FILE(GLOB SOURCE_FILES *.cpp)
-
-ADD_EXECUTABLE(a.exe ${SOURCE_FILES} Cofre.h Cofre.cpp Inventario.h Inventario.cpp Contenedor.h)
+add_executable(Practica_9 main.cpp Contenedor.h EmptyContainer.h EmptyContainer.cpp Cofre.h Cofre.cpp Item.h ItemApilable.h ItemApilable.cpp Inventario.h Inventario.cpp Filete.h Filete.cpp Espada.h Espada.cpp Bloque.h Bloque.cpp)
