--- a/Simulacro_examen_practicas_2/CMakeLists.txt
+++ b/Simulacro_examen_practicas_2/CMakeLists.txt
@@ -3,4 +3,4 @@ project(CloudPOO_v2)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(cloudpoo main.cpp Generador.cpp Generador.h Dispositivo.cpp Dispositivo.h DataCenter.cpp DataCenter.h)
+add_executable(cloudpoo main.cpp Generador.cpp Generador.h Dispositivo.cpp Dispositivo.h DataCenter.cpp DataCenter.h RackAlmacenamiento.h RackAlmacenamiento.cpp RackServidores.h RackServidores.cpp)
